fix(video-modal): avoid overflow

--- a/src/components/video-modal/video-modal.module.scss
+++ b/src/components/video-modal/video-modal.module.scss
@@ -4,6 +4,7 @@
   padding: 20px;
   // width: 80%;
   height: fit-content;
+  max-height: 90dvh;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -32,6 +33,7 @@
 .modal-content {
   display: flex;
   flex: 1;
+  overflow: hidden;
 }
 
 .video {
@@ -50,6 +52,8 @@
 }
 
 .sidebar {
+  display: flex;
+  flex-flow: column;
   padding-left: 20px;
   // flex: 1 0 200px;
   width: 250px;
@@ -67,7 +71,7 @@
 }
 
 .event-description {
-  max-height: 60dvh;
+  max-height: 100%;
   overflow: auto;
 
   ul {
